--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         app:layout_constraintVertical_bias="0.151" />
 
     <EditText
-        android:id="@+id/value"
+        android:id="@+id/value_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
