--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,11 +36,11 @@
 
 
     <EditText
-        android:id="@+id/value_user"
+        android:id="@+id/answer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="wprowadź wartość"
+        android:hint="wartość"
         android:inputType="number"
         android:minHeight="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -51,7 +51,7 @@
         app:layout_constraintVertical_bias="0.29000002" />
 
     <Button
-        android:id="@+id/show_path"
+        android:id="@+id/showAnswer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Zastosuj"
